# llm-proxy

./: .gitignore  AGENTS.md  README.md  main.py  makefile  pyproject.toml
llmproxy/: __init__.py  app.py  constants.py  db.py  gemini.py  libraries.md  models.py  openai.py  providers.py  ratelimit.py  retry.py  schemas.py  tracing.py  utility.py  validation.py
scripts/: ping_providers.py  stop.sh  validate_keys.py
tests/: test_gemini.py  test_main_preflight.py  test_payload_passthrough.py  test_ratelimit.py  test_response_cache.py  test_retry.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/api/traces/: route.ts
web/src/app/api/traces/[id]/: route.ts
web/src/app/api/traces/cache-hits/: route.ts
web/src/app/api/traces/cache-hits/stats/: route.ts
web/src/app/api/traces/providers/: route.ts
web/src/app/api/traces/stats/: route.ts
web/src/app/cache-hits/: page.tsx
web/src/app/traces/: page.tsx
web/src/app/traces/[id]/: page.tsx
web/src/components/: BarChart.tsx  CacheHitDetailPanel.tsx  CacheHitTable.tsx  JsonTree.tsx  Nav.tsx  Pagination.tsx  ProviderBadge.tsx  StatsTable.tsx  StatusBadge.tsx  TimeRangeSelect.tsx  TraceDetailPanel.tsx  TraceFilters.tsx  TraceTable.tsx
web/src/lib/: api.ts  constants.ts  db.ts  types.ts  utils.ts
